# cobuild-otx-contracts

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  rust-toolchain.toml
contracts/cobuild-otx-lock/: Cargo.toml  README.md
contracts/cobuild-otx-lock/src/: args.rs  chain.rs  entry.rs  error.rs  errors.rs  lib.rs  loader.rs  main.rs  runner.rs
contracts/cobuild-otx-lock/src/chain/: reader.rs
contracts/cobuild-otx-lock/src/verify/: local.rs  mod.rs  recover.rs
contracts/cobuild-otx-lock/tests/: args.rs  error.rs  runner.rs  verifier.rs
crates/cobuild-core/: Cargo.toml
crates/cobuild-core/src/: context.rs  engine.rs  error.rs  flow.rs  hash.rs  layout.rs  lib.rs  loader.rs  message.rs  otx_request.rs  plan.rs  prepare.rs  protocol.rs  query.rs  reader.rs  seal.rs  sighash.rs  signature.rs  source.rs  syscalls.rs  tasks.rs  view.rs  witness.rs
crates/cobuild-core/tests/: engine.rs  hash.rs  layout.rs  no_entity_dependency.rs  no_old_query_api.rs  plan.rs  signature_requests.rs  source.rs  tasks.rs  type_plan.rs  view.rs  witness.rs
crates/cobuild-types/: Cargo.toml
crates/cobuild-types/schemas/: core.mol  (+1 more)
docs/: CobuildAgentDevelopGuide.md
scripts/: find_clang  reproducible_build_docker
tests/: Cargo.toml
tests/contracts/limit-order/: Cargo.toml  README.md
tests/contracts/limit-order-lock/: Cargo.toml  Makefile
tests/contracts/limit-order-lock/src/: entry.rs  error.rs  input.rs  lib.rs  main.rs  otx.rs  settlement.rs  types.rs  validation.rs
tests/contracts/limit-order-type/: Cargo.toml  Makefile  README.md
tests/contracts/limit-order-type/src/: entry.rs  error.rs  generated_proxy_lock.rs  lib.rs  main.rs  otx.rs  settlement.rs  types.rs  validation.rs
tests/contracts/limit-order/src/: entry.rs  main.rs
tests/contracts/minted-nft-type/: Cargo.toml  Makefile  README.md
tests/contracts/minted-nft-type/src/: create.rs  entry.rs  error.rs  helpers.rs  lib.rs  main.rs  mode.rs  transfer.rs  types.rs
tests/contracts/nft-minter-type/: Cargo.toml  Makefile  README.md
tests/contracts/nft-minter-type/src/: entry.rs  error.rs  lib.rs  main.rs  types.rs  validation.rs
tests/contracts/nft-minter-type/src/validation/: create.rs  helpers.rs  mint.rs
tests/contracts/test-input-type-proxy-lock/: Cargo.toml  Makefile  README.md
tests/contracts/test-input-type-proxy-lock/src/: entry.rs  error.rs  lib.rs  main.rs
tests/contracts/test-nft/: Cargo.toml  Makefile  README.md
tests/contracts/test-nft/src/: entry.rs  error.rs  lib.rs  main.rs
tests/contracts/test-udt/: Cargo.toml  README.md
tests/contracts/test-udt/src/: entry.rs  error.rs  lib.rs  main.rs
tests/src/: lib.rs  tests.rs
tests/src/fixtures/: cobuild_otx_lock.rs  limit_order.rs  mod.rs  otx_hash.rs  support.rs  udt.rs
tests/src/fixtures/cobuild_otx_lock/: cases.rs  errors.rs  mod.rs
tests/src/fixtures/cobuild_otx_lock/cases/: basic.rs  helpers.rs  multi_otx.rs  otx_signatures.rs  partial_masks.rs  sighash_all.rs
tests/src/fixtures/common/: assets.rs  contracts.rs  errors.rs  mod.rs  personas.rs
tests/src/fixtures/limit_order/: actions.rs  errors.rs  lock_for_udt.rs  lock_nft_for_udt.rs  mod.rs  mutations.rs  nft_for_udt.rs  scenarios.rs  state.rs  type_nft_for_udt.rs
tests/src/fixtures/limit_order/lock_nft_for_udt/: fill.rs  mixed_type_lock.rs  multi_orders.rs  real_otx_lock.rs
tests/src/fixtures/limit_order/type_nft_for_udt/: create_order.rs  fill.rs  legacy_settlement.rs  real_otx_lock.rs
tests/src/fixtures/nft_minter/: errors.rs  mod.rs  scenarios.rs  state.rs
tests/src/fixtures/nft_minter/scenarios/: create.rs  mint.rs  minted_nft.rs  minter_lifecycle.rs  otx.rs
tests/src/framework/: assertions.rs  cells.rs  cobuild.rs  contracts.rs  fixture.rs  limit_order.rs  mod.rs  scripts.rs  signing.rs  tx.rs
tests/src/framework/cobuild/: layout.rs  message.rs  mod.rs  otx.rs  witness.rs
tests/src/framework/scenario/: mod.rs  outcome.rs  runner.rs
tests/src/framework/signing/: keys.rs  mod.rs  oracle.rs  otx.rs  tx.rs
tests/src/framework/tx/: builder.rs  handles.rs  malformed.rs  mutate.rs
tests/src/tests/: cobuild_protocol.rs  limit_order_actions.rs  meta.rs  signing_hash.rs  tx_mutations.rs
tests/tests/: cobuild_otx_lock.rs  contract_template_layout.rs  limit_order.rs  limit_order_lock.rs  limit_order_type.rs  makefile_layout.rs  nft_minter_type.rs  workspace_layout.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+71 files in other folders)
