[workspace]
resolver = "2"

members = [
  # Please don't remove the following line, we use it to automatically
  # detect insertion point for newly generated crates.
  # @@INSERTION_POINT@@
  "contracts/cobuild-otx-lock",
  "crates/cobuild-core",
  "crates/cobuild-types",
  "tests/contracts/limit-order-type",
  "tests/contracts/test-nft",
  "tests/contracts/test-udt",
  "tests/contracts/test-input-type-proxy-lock",
  "tests",
  "xtask",
]

[profile.release]
overflow-checks = true
strip = false
codegen-units = 1
debug = true
