[package]
name = "tests"
version = "0.1.0"
edition = "2024"

[features]
native-simulator = [ "ckb-testtool/native-simulator" ]

[dependencies]
blake2b-ref = "0.3.1"
cobuild-core = { path = "../crates/cobuild-core" }
cobuild-types = { path = "../crates/cobuild-types" }
ckb-hash = "1.1"
ckb-testtool = "1.1"
k256 = { version = "0.13.1" }
serde_json = "1.0"
