[package]
name = "cobuild-otx-lock"
version = "0.1.0"
edition = "2024"

[dependencies]
ckb-hash = { version = "1.1", default-features = false, features = ["ckb-contract"] }
ckb-std = { version = "1.1", default-features = false, features = ["allocator", "ckb-types", "dummy-atomic"] }
cobuild-core = { path = "../../crates/cobuild-core" }
cobuild-types = { path = "../../crates/cobuild-types", default-features = false }
k256 = { version = "=0.13.1", default-features = false, features = ["arithmetic", "ecdsa", "alloc"] }

[features]
library = []
native-simulator = ["library", "ckb-std/native-simulator"]
type-id = ["ckb-std/type-id"]
