[package]
name = "nft-minter-type"
version = "0.1.0"
edition = "2024"

[dependencies]
ckb-std = { version = "1.1", default-features = false, features = ["allocator", "calc-hash", "ckb-types", "dummy-atomic"] }
cobuild-core = { path = "../../../crates/cobuild-core" }

[features]
library = []
native-simulator = ["library", "ckb-std/native-simulator"]
type-id = ["ckb-std/type-id"]
